--- a/pom.xml
+++ b/pom.xml
@@ -23,16 +23,16 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
 	</properties>
-	
+
 	<distributionManagement>
 		<repository>
-			<id>release</id>
-			<name>releases</name>
+			<id>central</id>
+			<name>albargi-PC-releases</name>
 			<url>http://localhost:8081/artifactory/libs-release-local</url>
 		</repository>
 		<snapshotRepository>
-			<id>snapshot</id>
-			<name>snapshots</name>
+			<id>snapshots</id>
+			<name>albargi-PC-snapshots</name>
 			<url>http://localhost:8081/artifactory/libs-snapshot-local</url>
 		</snapshotRepository>
 	</distributionManagement>
@@ -40,7 +40,7 @@
 	<scm>
 		<connection>scm:git:git@github.com:azalbargi/devops.git</connection>
 		<developerConnection>scm:git:git@github.com:azalbargi/devops.git</developerConnection>
-		<url>git@github.com:azalbargi/devops.git</url>
+		<url>git@github.com:azalbargi/devops.gitt</url>
 		<tag>HEAD</tag>
 	</scm>
 
