--- a/pom.xml
+++ b/pom.xml
@@ -26,13 +26,13 @@
 
 	<distributionManagement>
 		<repository>
-			<id>central</id>
-			<name>albargi-PC-releases</name>
+			<id>release</id>
+			<name>releases</name>
 			<url>http://localhost:8081/artifactory/libs-release-local</url>
 		</repository>
 		<snapshotRepository>
-			<id>snapshots</id>
-			<name>albargi-PC-snapshots</name>
+			<id>snapshot</id>
+			<name>snapshots</name>
 			<url>http://localhost:8081/artifactory/libs-snapshot-local</url>
 		</snapshotRepository>
 	</distributionManagement>
