--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>com.example</groupId>
 	<artifactId>devops</artifactId>
-	<version>0.0.2</version>
+	<version>0.0.3-SNAPSHOT</version>
 	<packaging>war</packaging>
 
 	<name>devops</name>
@@ -40,7 +40,7 @@
 		<connection>scm:git:git@github.com:azalbargi/devops.git</connection>
 		<developerConnection>scm:git:git@github.com:azalbargi/devops.git</developerConnection>
 		<url>git@github.com:azalbargi/devops.gitt</url>
-		<tag>v0.0.2</tag>
+		<tag>HEAD</tag>
 	</scm>
 
 	<dependencies>
