--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
 	<scm>
 		<connection>scm:git:git@github.com:azalbargi/devops.git</connection>
 		<developerConnection>scm:git:git@github.com:azalbargi/devops.git</developerConnection>
-		<url>git@github.com:azalbargi/devops.gitt</url>
+		<url>git@github.com:azalbargi/devops.git</url>
 		<tag>v0.0.2</tag>
 	</scm>
 
