--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,5 +1,5 @@
 # server Config
-server.port=8088
+#server.port=8088
 
 # logging
 logging.level.root=INFO
@@ -10,5 +10,5 @@ logging.level.com.example.devops=INFO
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss.SSS} [%-5level] [%t] %c{1} - %msg%n
 
 # logging pattern for file
-#logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss.SSS} [%-Slevel] [%t] %c{1} - %msg%n
-#logging.file=C:/DevOps/apache-tomcat-8.5.24/logs/application.log
+logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss.SSS} [%-5level] [%t] %c{1} - %msg%n
+logging.file=../logs/devops.log
