--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,7 +1,7 @@
 node {
    def mvnHome
    stage('Prepare') {
-      git url: 'https://github.com/azalbargi/devops.git', branch: 'develop'
+      git url: 'https://github.com/azalbargi/devops.gitrl', branch: 'develop'
       mvnHome = tool 'maven'
    }
    stage('Build') {
@@ -30,9 +30,9 @@ node {
       }
    }
    stage('Deploy') {
-       sh 'curl -u jenkins:jenkins -T target/**.war "http://localhost:8080/manager/text/deploy?path=/devops&update=true"'
+       start "" "%PROGRAMFILES%\Git\git-bash.exe" -c 'curl -u jenkins:jenkins -T target/**.war "http://localhost:8080/manager/text/deploy?path=/devops&update=true"'
    }
    stage("Smoke Test"){
-       sh "curl --retry-delay 10 --retry 5 http://localhost:8080/devops"
+       start "" "%PROGRAMFILES%\Git\git-bash.exe" -c "curl --retry-delay 10 --retry 5 http://localhost:8080/devops"
    }
 }
