--- a/pom.xml
+++ b/pom.xml
@@ -40,9 +40,9 @@
 	</distributionManagement>
 
 	<scm>
-		<connection>scm:git:git@github.com:azalbargi/devops.git</connection>
-		<developerConnection>scm:git:git@github.com:azalbargi/devops.git</developerConnection>
-		<url>git@github.com:azalbargi/devops.git</url>
+		<connection>scm:git:https://github.com/azalbargi/devops.git</connection>
+		<developerConnection>scm:git:https://github.com/azalbargi/devops.git</developerConnection>
+		<url>https://github.com/azalbargi/devops.git</url>
 		<tag>v0.0.2</tag>
 	</scm>
 
