--- a/JenkinsFile
+++ b/JenkinsFile
@@ -15,13 +15,6 @@ node {
       junit '**/target/surefire-reports/TEST-*.xml'
       archive 'target/*.jar'
    }
-   stage('Integration Test') {
-     if (isUnix()) {
-        sh "'${mvnHome}/bin/mvn' -Dmaven.test.failure.ignore clean verify"
-     } else {
-        bat(/"${mvnHome}\bin\mvn" -Dmaven.test.failure.ignore clean verify/)
-     }
-   }
    stage('Sonar') {
       if (isUnix()) {
          sh "'${mvnHome}/bin/mvn' sonar:sonar"
@@ -29,22 +22,22 @@ node {
          bat(/"${mvnHome}\bin\mvn" sonar:sonar/)
       }
    }
-   stage('Deploy') {
+   stage('Deploy to Test Environment') {
        sh 'curl -u jenkins:jenkins -T target/**.war "http://localhost:8080/manager/text/deploy?path=/devops&update=true"'
    }
-   stage("Smoke Test"){
+   stage("Smoke Test for Test Environment"){
        sh "curl --retry-delay 10 --retry 5 http://localhost:8080/devops"
    }
-   stage("Deploy to QA"){
+   stage("Deploy to Pre-Production Environment"){
    	   sh 'curl -u jenkins:jenkins -T target/**.war "http://localhost:9080/manager/text/deploy?path=/devops&update=true"'
    }
-   stage("Smoke Test QA"){
+   stage("Smoke Test for Pre-Production Environment"){
    	   sh "curl --retry-delay 10 --retry 5 http://localhost:9080/devops"
    }
-   stage("Deploy to Prod"){
+   stage("Deploy to Production Environment"){
    	   sh 'curl -u jenkins:jenkins -T target/**.war "http://localhost:7080/manager/text/deploy?path=/devops&update=true"'
    }
-   stage("Smoke Test Prod"){
+   stage("Smoke Test for Production Environment"){
    	   sh "curl --retry-delay 10 --retry 5 http://localhost:7080/devops"
    }
 }
